apps/talos-home/proxmox/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.2.10
    ports:
      - port: 8006
        name: https
