apps/talos-home/proxmox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: networking
spec:
  type: ExternalName
  externalName: 192.168.2.10
  ports:
    - port: 8006
      targetPort: 8006
