apps/talos-home/proxmox/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: proxmox
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`proxmox.lan`)
      services:
        - name: proxmox-external
          port: 8006
  tls:
    passthrough: true
